# lidar-scan-view

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
src/: CMakelists.txt
src/controllers/: CMakeLists.txt  controller.cpp  controller.h
src/models/: CMakeLists.txt  scan_data_model.cpp  scan_data_model.h
src/widgets/: CMakeLists.txt  actions.h  logs_view.h  main_window.cpp  main_window.h  menu_bar.h  status_bar.h
src/widgets/opengl/: CMakeLists.txt  camera.cpp  camera.h  mesh.cpp  mesh.h  opengl_painter.cpp  opengl_painter.h  opengl_view.cpp  opengl_view.h  shader_program.cpp  shader_program.h
